config/app/deployment.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: crud-system
  name: crud-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-postgres-crud
  namespace: crud-system
  annotations:
    kapp.k14s.io/change-group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-postgres-crud
  template:
    metadata:
      labels:
        app: go-postgres-crud
    spec:
      containers:
        - name: go-postgres-crud
          image: ko://github.com/rkgcloud/crud
          ports:
            - containerPort: #@ data.values.app_port
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
